# app/Models/DailyActivityHeader.php
@@ -12,12 +12,16 @@ class DailyActivityHeader extends Model
     use HasFactory, HasUuids, SoftDeletes;
 
     protected $keyType = 'string';
+
     public $incrementing = false;
+
     public $timestamps = false;
+
     protected $guarded = [];
 
     protected $casts = [
         'date' => 'datetime',
+        'feed_consumption_kg' => 'float',
         'created_at_client' => 'datetime',
         'created_at_server' => 'datetime',
         'updated_at_client' => 'datetime',
